# src/api/routes/controllers/adapters/video.controller.adapter.ts
@@ -1,26 +1,16 @@
 import express from "express";
 import { HttpCode } from "../../../../application/domain/HttpCode";
 import { CreateVideoUseCase } from "../../../../application/usecases/video/create-video.usecase";
-import {
-  VideoRequest,
-  VideoResponse,
-} from "../../../../../external-libraries/openapi";
+import { VideoRequest } from "../../../../../external-libraries/openapi";
 const router = express.Router();
 
 const createVideoUseCase = new CreateVideoUseCase();
 
 router.post(
   "/",
-  async (
-    req: express.Request<VideoRequest>,
-    res: express.Response<VideoResponse>
-  ) => {
-    const { _id, ref, src } = await createVideoUseCase.createVideo(req.body);
-    res.status(HttpCode.CREATED).json({
-      id: _id,
-      ref,
-      src,
-    });
+  async (req: express.Request<VideoRequest>, res: express.Response<void>) => {
+    await createVideoUseCase.createVideo(req.body);
+    res.status(HttpCode.CREATED).send();
   }
 );
 
